Auto format gene.js and html & Solve tables header misaligned issue

--- a/app/styles/_gene.scss
+++ b/app/styles/_gene.scss
@@ -18,6 +18,14 @@
       border-bottom-color: $orange;
       box-shadow: 0 1px 0 0 $orange;
     }
+    .dataTables_filter {
+      label {
+        white-space: nowrap;
+      }
+      input[type=search] {
+        width: auto;
+      }
+    }
   }
 
   .gene-title {
